💄 style: css normalization

--- a/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
@@ -6,8 +6,8 @@
          Fullscreen="true"
          Persistent="true"
          Transition="null">
-    <MCard Class="d-flex justify-center align-center fcfcfc">
-        <MList Class="@($"text-center fcfcfc {(FirstLaunchLanguage?"d-none":"")}")" Style="width:100%;">
+    <MCard Class="my-first-launch-card">
+        <MList Class="@($"my-first-launch-list {(FirstLaunchLanguage?"d-none":"")}")">
             <MListItemGroup Value="0"
                             Mandatory="true"
                             Color="indigo">
