--- a/SwashbucklerDiary/Components/MyComponents/TagCard.razor
+++ b/SwashbucklerDiary/Components/MyComponents/TagCard.razor
@@ -3,7 +3,7 @@
 
 <MHover>
     <MCard @attributes="context.Attrs"
-           Class="mb-5 tag-card"
+           Class="mb-5 my-tag-card"
            Elevation="@(context.Hover?"4":"2")"
            Ripple="false"
            Rounded="@("lg")"
