--- a/SwashbucklerDiary/Components/Swiper/SwiperTabItem.razor
+++ b/SwashbucklerDiary/Components/Swiper/SwiperTabItem.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-<div class="swiper-slide overflow-auto" style="position:relative;">
-    <MContainer Fluid Class="px-4" Style="position:absolute;box-sizing:border-box;">
+<div class="swiper-slide">
+    <MContainer Fluid Class="my-container">
         @ChildContent
     </MContainer>
 </div>
