--- a/SwashbucklerDiary/Pages/BackupsPage.razor
+++ b/SwashbucklerDiary/Pages/BackupsPage.razor
@@ -11,11 +11,11 @@
     <MTabs @bind-Value="tabs"
            ActiveClass="text-h6 font-weight-bold"
            HideSlider="true">
-        <MTab Class="m-tab-swiper"
+        <MTab Class="my-tab"
               Ripple="false">
             @(I18n.T("Backups.Local"))
         </MTab>
-        <MTab Class="m-tab-swiper"
+        <MTab Class="my-tab"
               Ripple="false">
             @(I18n.T("Backups.WebDAV"))
         </MTab>
