--- a/SwashbucklerDiary/Pages/LocationPage.razor
+++ b/SwashbucklerDiary/Pages/LocationPage.razor
@@ -27,8 +27,8 @@
 
     @if (!Locations.Any())
     {
-        <div class="d-flex justify-center" style="padding-top:20vh;">
-            <div class="text-h6 text--secondary font-weight-bold-table">
+        <div class="my-not-have">
+            <div class="text-h6 text--secondary font-weight-bold-desktop">
                 @(I18n.T("Location.NoLocation"))
             </div>
         </div>
