--- a/SwashbucklerDiary/Pages/LogPage.razor
+++ b/SwashbucklerDiary/Pages/LogPage.razor
@@ -57,8 +57,8 @@
     </div>
     @if (!Logs.Any())
     {
-        <div class="d-flex justify-center" style="padding-top:20vh;">
-            <div class="text-h6 text--secondary font-weight-bold-table">
+        <div class="my-not-have">
+            <div class="text-h6 text--secondary font-weight-bold-desktop">
                 @(I18n.T("Log.NoLog"))
             </div>
         </div>
