--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -132,7 +132,7 @@
     </div>
 
     <div class="d-no-hover-none hidden-xs-only">
-        <MButton Class="px-8 mr-2 btn-chip text-subtitle-1"
+        <MButton Class="px-8 mr-2 my-btn-chip text-subtitle-1"
                  Rounded="true"
                  Width="120"
                  Height="40"
@@ -140,7 +140,7 @@
                  OnClick="OnSave">
             @(I18n.T("Share.Save"))
         </MButton>
-        <MButton Class="px-8 btn-chip text-subtitle-1"
+        <MButton Class="px-8 my-btn-chip text-subtitle-1"
                  Width="120"
                  Height="40"
                  Rounded="true"
