--- a/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
+++ b/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
@@ -9,12 +9,12 @@
                    Value="Show"
                    MiniVariant="MiniVariant"
                    MiniVariantChanged="MiniVariantChanged"
-                   Style="max-height:unset;transition: width ease 0.3s;">
+                   Style="max-height:unset;transition: width ease 0.25s;">
         <MList Shaped="true" Flat="true">
             <MListItemGroup Value="Value"
                         ValueChanged="ValueChanged"
                         Mandatory="true"
-                        ActiveClass="@(MiniVariant?"":"navigation-active")">
+                        ActiveClass="@(MiniVariant?"":"my-navigation-drawer-active")">
                 @foreach (var (item, i) in Items.Select((v, i) => (v, i)))
                 {
                     var activated = Value == i;
@@ -25,8 +25,7 @@
                                 @(activated ? item.SelectedIcon : item.Icon)
                             </MIcon>
                         </MListItemIcon>
-                        <MListItemTitle Class="@(activated?"text-h6 font-weight-bold":"")"
-                                Style="transition: font-size 0.3s ease;">
+                        <MListItemTitle Class="@(activated?"text-h6 font-weight-bold":"")">
                             @(I18n.T(item.Text))
                         </MListItemTitle>
                     </MListItem>
