--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -2,6 +2,8 @@
 @using SwashbucklerDiary.Models
 @inherits PageComponentBase
 
+<link href="css/extend/masa-blazor-extend-enqueued-snackbars.css" rel="stylesheet" />
+
 <MAppBar App="true"
          Elevation="0">
     <MToolbarTitle Class="font-weight-bold">
