--- a/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
+++ b/SwashbucklerDiary/Shared/MainNavigationDrawer.razor
@@ -1,15 +1,13 @@
 ﻿@using SwashbucklerDiary.IServices
 @using SwashbucklerDiary.Models
+@implements IDisposable
 
-@if (Show)
-{
-    <MNavigationDrawer App="true"
+<MNavigationDrawer App="true"
                    Floating="true"
-                   Permanent="true"
                    Value="Show"
+                   Stateless="true"
                    MiniVariant="MiniVariant"
-                   MiniVariantChanged="MiniVariantChanged"
-                   Style="max-height:unset;transition: width ease 0.25s;">
+                   Style="max-height:unset;transition: width ease 0.3s;">
         <MList Shaped="true" Flat="true">
             <MListItemGroup Value="Value"
                         ValueChanged="ValueChanged"
@@ -33,11 +31,17 @@
             </MListItemGroup>
         </MList>
     </MNavigationDrawer>
-}
 
 @code {
+    private bool MiniVariant => MasaBlazor.Breakpoint.Sm;
+    private bool Show => MasaBlazor.Breakpoint.SmAndUp;
+
+    [Inject]
+    private MasaBlazor MasaBlazor { get; set; } = default!;
     [Inject]
     private II18nService I18n { get; set; } = default!;
+    [Inject]
+    private NavigationManager Navigation { get; set; } = default!;
 
     [Parameter]
     public StringNumber Value { get; set; } = 0;
@@ -45,10 +49,21 @@
     public EventCallback<StringNumber> ValueChanged { get; set; }
     [Parameter]
     public List<NavigationButton> Items { get; set; } = new();
-    [Parameter]
-    public bool MiniVariant { get; set; }
-    [Parameter]
-    public EventCallback<bool> MiniVariantChanged { get; set; }
-    [Parameter]
-    public bool Show { get; set; }
+
+    public void Dispose()
+    {
+        MasaBlazor.Breakpoint.OnUpdate -= InvokeStateHasChangedAsync;
+        GC.SuppressFinalize(this);
+    }
+
+    protected override async Task OnInitializedAsync()
+    {
+        MasaBlazor.Breakpoint.OnUpdate += InvokeStateHasChangedAsync;
+        await base.OnInitializedAsync();
+    }
+
+    private async Task InvokeStateHasChangedAsync()
+    {
+        await InvokeAsync(StateHasChanged);
+    }
 }
