♻️ refactor: reface FirstLauchDialog

--- a/SwashbucklerDiary/Shared/MainLayout.razor
+++ b/SwashbucklerDiary/Shared/MainLayout.razor
@@ -3,11 +3,12 @@
 <MApp>
     <ErrorBoundary>
         <ChildContent>
-            
+            <FirstLaunchDialog />
             <MMain Style="@(MainStyle)">
                 <MainNavigationDrawer @bind-Value="SelectedItemIndex"
                                       Items="NavigationButtons">
                 </MainNavigationDrawer>
+
                 @Body
             </MMain>
             <MainBottomNavigation @bind-Value="SelectedItemIndex"
