--- a/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/FirstLaunchDialog.razor
@@ -1,56 +1,47 @@
 ﻿@namespace SwashbucklerDiary.Components
-@inherits DialogComponentBase
 
-<MDialog Value="Value"
-         ValueChanged="ValueChanged"
-         Fullscreen="true"
-         Persistent="true"
-         Transition="null">
-    <MCard Class="my-first-launch-card">
-        <MList Class="@($"my-first-launch-list {(FirstLaunchLanguage?"d-none":"")}")">
-            <MListItemGroup Value="0"
-                            Mandatory="true"
-                            Color="indigo">
-                @foreach (var item in Languages)
-                {
-                    <MListItem OnClick="()=>SetLanguage(item.Value)">
-                        <MListItemContent>
-                            <MListItemTitle>
-                                @(item.Key)
-                            </MListItemTitle>
-                        </MListItemContent>
-                    </MListItem>
-                }
-            </MListItemGroup>
-        </MList>
+<div class="@($"my-first-launch-card {(Show?"":"d-none")}")">
+    <MList Class="@($"my-first-launch-list {(SelectedLanguage?"d-none":"")}")">
+        <MListItemGroup Value="0"
+                        Mandatory="true"
+                        Color="indigo">
+            @foreach (var item in Languages)
+            {
+                <MListItem OnClick="()=>SetLanguage(item.Value)">
+                    <MListItemContent>
+                        <MListItemTitle>
+                            @(item.Key)
+                        </MListItemTitle>
+                    </MListItemContent>
+                </MListItem>
+            }
+        </MListItemGroup>
+    </MList>
+</div>
 
-        <div class="@(FirstLaunchLanguage?"":"d-none")">
-            <MCard Class="ma-6"
-                   Elevation="4"
-                   Rounded="@("lg")"
-                   MaxWidth="420">
-                <MCardTitle Class="font-weight-bold justify-center">
-                    @(I18n.T("AgreementAndPolicy.Title"))
-                </MCardTitle>
-                <MCardText Class="pb-0">
-                    <MarkdownPreview Value="@(I18n.T("AgreementAndPolicy.Content"))"></MarkdownPreview>
-                </MCardText>
-                <MCardActions>
-                    <MButton Class="flex-grow-1"
-                             Text="true"
-                             Rounded="true"
-                             OnClick="OnDisagree">
-                        @(I18n.T("AgreementAndPolicy.Disagree"))
-                    </MButton>
-                    <MButton Class="flex-grow-1"
-                             Dark="true"
-                             Rounded
-                             Color="primary"
-                             OnClick="OnArgee">
-                        @(I18n.T("AgreementAndPolicy.Agree"))
-                    </MButton>
-                </MCardActions>
-            </MCard>
-        </div>
+<MDialog Value="SelectedLanguage && Show"
+         MaxWidth="420">
+    <MCard Rounded="@("lg")">
+        <MCardTitle Class="font-weight-bold justify-center">
+            @(I18n.T("AgreementAndPolicy.Title"))
+        </MCardTitle>
+        <MCardText Class="pb-0">
+            <MMarkdownIt Source="@(I18n.T("AgreementAndPolicy.Content"))"></MMarkdownIt>
+        </MCardText>
+        <MCardActions>
+            <MButton Class="flex-grow-1"
+                     Text="true"
+                     Rounded="true"
+                     OnClick="OnDisagree">
+                @(I18n.T("AgreementAndPolicy.Disagree"))
+            </MButton>
+            <MButton Class="flex-grow-1"
+                     Dark="true"
+                     Rounded="true"
+                     Color="primary"
+                     OnClick="OnArgee">
+                @(I18n.T("AgreementAndPolicy.Agree"))
+            </MButton>
+        </MCardActions>
     </MCard>
 </MDialog>
