--- a/SwashbucklerDiary/Pages/AboutPage.razor
+++ b/SwashbucklerDiary/Pages/AboutPage.razor
@@ -11,7 +11,7 @@
         <MList>
             <MListItem>
                 <MListItemAvatar Rounded="@("lg")" Size="75" Class="mr-8 hidden-xs-only">
-                    <MImage Src="./logo/logo.jpg"></MImage>
+                    <MImage Src="./logo/logo.svg"></MImage>
                 </MListItemAvatar>
                 <MListItemContent>
                     <MListItemTitle Class="text-h5 my-2 font-weight-bold">
