--- a/SwashbucklerDiary/Components/DialogComponents/SelectLocation.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectLocation.razor
@@ -29,7 +29,7 @@
                     </MListItemContent>
 
                     <MListItemAction>
-                        @if (item.Name == Location)
+                        @if (item.Name == InternalLocation)
                         {
                             <MIcon>
                                 mdi-check
@@ -40,14 +40,18 @@
             }
         </MCardText>
         <MCardActions>
+            <MButton Text="true"
+                     OnClick="()=>ShowAdd = true">
+                @(I18n.T("Share.Add"))
+            </MButton>
             <MSpacer></MSpacer>
-            <MButton Text="true" OnClick="Reset">
-                @(I18n.T("Share.Reset"))
+            <MButton Text="true" OnClick="HandleOnCancel">
+                @(I18n.T("Share.Cancel"))
             </MButton>
             <MButton Text="true"
                      Color="primary"
-                     OnClick="()=>ShowAdd = true">
-                @(I18n.T("Share.Add"))
+                     OnClick="HandleOnOK">
+                @(I18n.T("Share.Save"))
             </MButton>
         </MCardActions>
     </MCard>
