--- a/SwashbucklerDiary/Components/MyComponents/MyMenu.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyMenu.razor
@@ -49,7 +49,8 @@
                ValueChanged="ValueChanged"
                Rounded="@("lg")"
                Bottom
-               Left
+               Right
+               OffsetY
                Transition="scroll-x-reverse-transition">
             <ActivatorContent>
                 <MButton Icon
