--- a/SwashbucklerDiary/Components/MyComponents/MySearch.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MySearch.razor
@@ -13,7 +13,7 @@ else
     <MTextField TValue="string"
             Value="Search"
             ValueChanged="InternalSearchChanged"
-            Class="ml-3 rounded-lg"
+            Class="rounded-lg"
             Solo="true"
             Flat="true"
             Autofocus="true"
