--- a/SwashbucklerDiary/Shared/MainBottomNavigation.razor
+++ b/SwashbucklerDiary/Shared/MainBottomNavigation.razor
@@ -5,7 +5,7 @@
 <MBottomNavigation Value="Value"
                    ValueChanged="ValueChanged"
                    InputValue="Show"
-                   Class="d-flex justify-space-around elevation-0"
+                   Class="d-flex justify-space-around"
                    Mandatory="true"
                    App="true">
     @foreach (var (item, i) in Items.Select((v, i) => (v, i)))
